# laboratorio2_gr2

./: README.md
laboratorio2_gr2/: CMakeLists.txt  funciones_gr2.c  lib1.h  main.c
laboratorio2_gr2/datos/: lista_reales1.csv  lista_reales2.csv  lista_reales3.csv  lista_reales4.csv  lista_reales5.csv  lista_reales6.csv
laboratorio2_gr2/include/: lib_gr2.h
laboratorio2_gr2/src/: files_ops1.c  main.c
